--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,25 @@
 name = "GENE"
-uuid = "b24b5d4d-83e2-4d61-ab9c-a64dc42966db"
+uuid = "9311909c-6c15-4576-8def-6ed34c7f6f99"
 authors = ["TemplierPaul <templier.paul@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+ArcadeLearningEnvironment = "b7f77d8d-088d-5e02-8ac0-89aab2acc977"
+Cambrian = "7f27c84d-2d74-42e5-be5f-94f6748267f3"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+EvolutionaryStrategies = "0db62460-6af5-4b1a-9d1c-927487bb80c6"
+FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
